--- a/Copy_of_Project_2_Speech_Recognition.ipynb
+++ b/Copy_of_Project_2_Speech_Recognition.ipynb
@@ -166,12 +166,26 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"Hello\")"
+      ],
       "metadata": {
-        "id": "R20X5kTaM37Z"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R20X5kTaM37Z",
+        "outputId": "00cbf001-de16-49e2-9f58-fabe62f209fd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ]
     }
   ]
 }
