--- a/Project_2_Non_DL_Speech_Recognition.ipynb
+++ b/Project_2_Non_DL_Speech_Recognition.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/karank85/speech-recognition/blob/main/Project_2_Non_DL_Speech_Recognition.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 26,
@@ -935,7 +946,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "hmm_models = []\n",
         "X = np.array([])\n",
         "y_words = []\n",
         "for index, row in ds.df.iterrows():\n",
@@ -1006,15 +1017,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "cKuiWzTBmZ4O"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
