added sample gumbel quantizer

--- a/Project2_DL_Speech_Recognition.ipynb
+++ b/Project2_DL_Speech_Recognition.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiTpDFwAX+z0/ABOPgV9nN",
+      "authorship_tag": "ABX9TyNzVorJ9mJvonzRAqLf5+WG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
           "height": 35
         },
         "id": "3w9t1VF0gRQq",
-        "outputId": "925906af-0a58-411c-fe65-5472a3d5b82e"
+        "outputId": "7f9d5e24-e427-4710-e1e9-33e49c092a6b"
       },
       "execution_count": null,
       "outputs": [
@@ -78,7 +78,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 5
         }
       ]
     },
@@ -89,10 +89,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "hsP0jZs-gTMe"
+        "id": "hsP0jZs-gTMe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2ef5e990-2226-48db-96af-c1c849e13b1b"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -172,35 +184,161 @@
         "ds = AudioDataset()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 144
-        },
-        "id": "uFti1k8ighEU",
-        "outputId": "e64d69b5-ff3d-4018-d1f1-3db056d498a4"
+        "id": "uFti1k8ighEU"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'AudioDataset' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-d061b6492d00>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAudioDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'AudioDataset' is not defined"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "ds.load_transcriptions(\"/content/drive/MyDrive/datasets\")\n"
+        "ds.load_transcriptions(\"/content/drive/MyDrive/\")\n"
       ],
       "metadata": {
-        "id": "FC6BlmBgghWT"
+        "id": "FC6BlmBgghWT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5d4767b1-90ba-45de-9e67-5d512c4118ef"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Wave2Vec2.0 Model Framework"
+      ],
+      "metadata": {
+        "id": "TMiiBtWW4tii"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Hyperparameters"
+      ],
+      "metadata": {
+        "id": "9XeYPu6r5W9T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "configs = {\n",
+        "    \"code_vector_size\": 0,\n",
+        "    \"num_code_vector_groups\": 0,\n",
+        "    \"num_code_vectors_per_group\": 0,\n",
+        "    \"mask_time_prob\": 0,\n",
+        "    \"num_mask_time_steps\": 0,\n",
+        "    \"extracted_feature_size\": 0,\n",
+        "    \"encoder_hidden_size\": 0,\n",
+        "    \"gumbel_init_temperature\": 0,\n",
+        "    \"contrastive_loss_temperature\": 0,\n",
+        "    \"num_contrastive_loss_negative_samples\": 0,\n",
+        "    \"loss_alpha\": 0\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "LdHIHWdd5ubn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### GumbelVectorQuantizer"
+      ],
+      "metadata": {
+        "id": "VE9t6P5W43wQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class GumbelVectorQuantizer(nn.Module):\n",
+        "    def __init__(self, config):\n",
+        "        super().__init__()\n",
+        "        self.num_groups = config[\"num_code_vector_groups\"]\n",
+        "        self.num_vectors = config[\"num_code_vectors_per_group\"]\n",
+        "\n",
+        "        self.linear = nn.Linear(\n",
+        "            config[\"extracted_feature_size\"],\n",
+        "            self.num_groups * self.num_vectors\n",
+        "        )\n",
+        "        self.code_book = nn.Parameter(\n",
+        "            torch.FloatTensor(1, self.num_groups, self.num_vectors, config[\"code_vector_size\"] // self.num_groups)\n",
+        "        )\n",
+        "\n",
+        "        self.temperature = config[\"gumbel_init_temperature\"]\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def _compute_perplexity(probs: torch.Tensor, lengths: torch.Tensor) -> torch.Tensor:\n",
+        "        \"\"\"\n",
+        "        Args:\n",
+        "            probs (torch.Tensor): with shape `(B, L, G, V)`\n",
+        "            lengths (torch.Tensor): with shape `(B)`\n",
+        "\n",
+        "        Returns:\n",
+        "            torch.Tensor with shape `(G, V)`\n",
+        "        \"\"\"\n",
+        "        where_calculate_probs = torch.arange(probs.size(1), device=probs.device).unsqueeze(0) < lengths.unsqueeze(-1)\n",
+        "        probs = probs[where_calculate_probs == 1]\n",
+        "\n",
+        "        num_values = probs.size(0)\n",
+        "        perplexity = probs.sum(0) / num_values\n",
+        "\n",
+        "        return perplexity\n",
+        "\n",
+        "    def forward(self, hidden_states: torch.Tensor, lengths: torch.Tensor) -> tuple[torch.Tensor, torch.Tensor]:\n",
+        "        \"\"\"\n",
+        "        Args:\n",
+        "            hidden_states (torch.Tensor): with shape `(B, L, D1)`\n",
+        "            lengths (torch.Tensor): with shape `(B)`\n",
+        "\n",
+        "        Returns:\n",
+        "            tuple(\n",
+        "            code_vectors (torch.Tensor): with shape `(B, L, D2)`\n",
+        "            perplexity (torch.Tensor): with shape `(G, V)`\n",
+        "            )\n",
+        "        \"\"\"\n",
+        "\n",
+        "        batch_size, length, _ = hidden_states.shape\n",
+        "\n",
+        "        hidden_states = self.linear(hidden_states)\n",
+        "        # `(B, L, G * V)` -> `(B * L * G, V)`\n",
+        "        hidden_states = hidden_states.view(batch_size * length * self.num_groups, -1)\n",
+        "\n",
+        "        code_vector_probs = nn.functional.gumbel_softmax(\n",
+        "            hidden_states.float(), tau=self.temperature, hard=True\n",
+        "        ).type_as(hidden_states)\n",
+        "        code_vector_soft_dist = torch.softmax(\n",
+        "            hidden_states.view(batch_size, length, self.num_groups, -1).float(), dim=-1\n",
+        "        )\n",
+        "        perplexity = self._compute_perplexity(code_vector_soft_dist, lengths)\n",
+        "\n",
+        "        code_vector_probs = code_vector_probs.view(batch_size * length, self.num_groups, -1).unsqueeze(-1)\n",
+        "\n",
+        "        code_vectors = code_vector_probs * self.code_book\n",
+        "        # `(B * L, G, V, D)` -> `(B, L, G * D)`\n",
+        "        code_vectors = code_vectors.sum(-2).view(batch_size, length, -1)\n",
+        "\n",
+        "        return code_vectors, perplexity"
+      ],
+      "metadata": {
+        "id": "ZPmN2uqr4GQm"
       },
       "execution_count": null,
       "outputs": []
