serializing object for saving hmm model

--- a/Copy_of_Project_2_Non_DL_Speech_Recognition.ipynb
+++ b/Copy_of_Project_2_Non_DL_Speech_Recognition.ipynb
@@ -1056,6 +1056,68 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Saving the model\n"
+      ],
+      "metadata": {
+        "id": "b31QY4FKzyRO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "    import cPickle as pickle\n",
+        "except ModuleNotFoundError:\n",
+        "    import pickle"
+      ],
+      "metadata": {
+        "id": "_irI9lu8z01X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def save_object(obj, filename):\n",
+        "    \"\"\"\n",
+        "    Serialize object and store it in the newly\n",
+        "    created file with the specified file name.\n",
+        "\n",
+        "    Note: This works for array as well.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    with open(f\"{filename}.pkl\", 'wb') as outp:\n",
+        "        pickle.dump(obj, outp, pickle.HIGHEST_PROTOCOL)\n",
+        "\n",
+        "def load_object(filename):\n",
+        "  \"\"\"\n",
+        "  Load serialized object and return it. Exception will\n",
+        "  be raised if the specified file is missing.\n",
+        "  \"\"\"\n",
+        "\n",
+        "    with open(f\"{filename}.pkl\", 'rb') as inp:\n",
+        "      return pickle.load(inp)\n",
+        "    print(f\"File '{filename}.pkl' not found.\")\n",
+        "\n",
+        "# ==== Usage Example ====\n",
+        "#\n",
+        "# Save object:\n",
+        "# foo = Foo()\n",
+        "# save_object(foo, 'foo')\n",
+        "#\n",
+        "# Load object:\n",
+        "# foo_obj = load_object('foo')"
+      ],
+      "metadata": {
+        "id": "VKli60-sz4Yp"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
