--- a/Project2_DL_Speech_Recognition.ipynb
+++ b/Project2_DL_Speech_Recognition.ipynb
@@ -11651,7 +11651,7 @@
           "model_name": "AudioRecorderModel",
           "model_module_version": "~0.6.0",
           "state": {
-            "_data_src": "blob:https://d86h5hx2awp-496ff2e9c6d22116-0-colab.googleusercontent.com/76f8e809-9ee1-4662-a868-533ef6536ac5",
+            "_data_src": "blob:https://d86h5hx2awp-496ff2e9c6d22116-0-colab.googleusercontent.com/1eba8fd3-0235-4047-85f7-3aaa8e5e2367",
             "_dom_classes": [],
             "_model_module": "jupyter-webrtc",
             "_model_module_version": "~0.6.0",
@@ -12569,10 +12569,10 @@
       "execution_count": 4,
       "metadata": {
         "id": "QZycw3QagLpa",
-        "outputId": "dbbf163c-6a27-408d-a7bd-b4e2e186b150",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dbbf163c-6a27-408d-a7bd-b4e2e186b150"
       },
       "outputs": [
         {
@@ -13036,7 +13036,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Model Imports"
+        "# Set up DL Model"
       ],
       "metadata": {
         "id": "2O10RAOk5ybk"
@@ -13045,10 +13045,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Wave2Vec2.0"
+        "## We'll start with Wave2Vec2.0 to explore how we can setup and train the model"
       ],
       "metadata": {
         "id": "TMiiBtWW4tii"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Import Processor"
+      ],
+      "metadata": {
+        "id": "CcBEcK8iz6j7"
       }
     },
     {
@@ -13216,6 +13225,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Apply our Processor"
+      ],
+      "metadata": {
+        "id": "qXK9Zsw-z9Pi"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def apply_processor(batch):\n",
@@ -13290,6 +13308,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Apply Data Collator"
+      ],
+      "metadata": {
+        "id": "P6wAthAhz-7t"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Need to create a data collator to prepare batches of data suitable for training CTC loss-based models\n",
@@ -13336,10 +13363,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Set up Evaluation"
+      ],
+      "metadata": {
+        "id": "lQU32wDW0Ch8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "wer_metric = evaluate.load(\"wer\")"
       ],
       "metadata": {
@@ -13405,6 +13439,15 @@
       },
       "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Load in our model"
+      ],
+      "metadata": {
+        "id": "HK0FUR6l0F7J"
+      }
     },
     {
       "cell_type": "code",
@@ -14920,7 +14963,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 995,
+          "height": 960,
           "referenced_widgets": [
             "c41af96e809b40318e4ac43a6360e0c7",
             "88e90c7e267342c89aac2d8d9b628030",
@@ -15332,7 +15375,7 @@
       "metadata": {
         "id": "D0rWBvwgY9Ya"
       },
-      "execution_count": 43,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -15352,17 +15395,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LwZ4lJrRZRiZ",
-        "outputId": "dac02e69-1527-4463-b6e7-e7639cd4b0dc"
+        "outputId": "64970273-5ff3-4a3c-9017-7f8c0bb266e8"
       },
-      "execution_count": 44,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hubert ['I THINK I USED MY GREADCOCK']\n",
-            "wav2vec ['I THINK I USD MY GRAD COUT']\n",
-            "data2vec ['I THINK I USED MY CREADCOCK']\n"
+            "hubert ['MY AUDIOTISE AUDOTIS']\n",
+            "wav2vec ['A DEYOUTES ULD UTIS']\n",
+            "data2vec ['Y AUDIOTISE AUDOTIS']\n"
           ]
         }
       ]
@@ -15562,8 +15605,6 @@
         "augmented_dataset = custom_dataset.map(apply_augmentation, remove_columns=custom_dataset.column_names[\"train\"], num_proc=4)"
       ],
       "metadata": {
-        "id": "rn7GAjN6iSUB",
-        "outputId": "1a9fa26c-6061-40da-8d04-c8dac1035058",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81,
@@ -15591,7 +15632,9 @@
             "0e8a76c960a347388a47db2545fb7818",
             "6f6773037a374fe18b21fd8038bd067a"
           ]
-        }
+        },
+        "id": "rn7GAjN6iSUB",
+        "outputId": "1a9fa26c-6061-40da-8d04-c8dac1035058"
       },
       "execution_count": 71,
       "outputs": [
@@ -15645,12 +15688,12 @@
         "wav2vec.train(\"/content/drive/MyDrive/model/wav2vec-model-augmented\")"
       ],
       "metadata": {
-        "id": "bw5YoDmMWsft",
-        "outputId": "c78d9bba-2ffc-4c50-b075-4f4ff9ea5dba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 826
-        }
+        },
+        "id": "bw5YoDmMWsft",
+        "outputId": "c78d9bba-2ffc-4c50-b075-4f4ff9ea5dba"
       },
       "execution_count": 86,
       "outputs": [
