--- a/Project2_DL_Speech_Recognition.ipynb
+++ b/Project2_DL_Speech_Recognition.ipynb
@@ -6,6 +6,7 @@
       "provenance": [],
       "gpuType": "V100",
       "machine_shape": "hm",
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12565,6 +12566,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Deep Learning Implementation for HuggingFace"
+      ],
+      "metadata": {
+        "id": "nH--KYko0ds6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Import models"
+      ],
+      "metadata": {
+        "id": "kgUuRJkG0iOM"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
@@ -12784,6 +12803,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Prepare Dataset"
+      ],
+      "metadata": {
+        "id": "fcFr0p_21xO4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### AudioDataset class"
+      ],
+      "metadata": {
+        "id": "aJwJQBts0kpo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Assumptions:\n",
@@ -12865,6 +12902,15 @@
       },
       "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Extract our **dataset**"
+      ],
+      "metadata": {
+        "id": "-nYDQL3b0nWK"
+      }
     },
     {
       "cell_type": "code",
@@ -13036,7 +13082,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Set up DL Model"
+        "## Set up DL Model"
       ],
       "metadata": {
         "id": "2O10RAOk5ybk"
@@ -13045,7 +13091,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## We'll start with Wave2Vec2.0 to explore how we can setup and train the model"
+        "We'll start with Wave2Vec2.0 to explore how we can setup and train the model"
       ],
       "metadata": {
         "id": "TMiiBtWW4tii"
@@ -13310,7 +13356,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Apply Data Collator"
+        "### Apply Data Collator"
       ],
       "metadata": {
         "id": "P6wAthAhz-7t"
@@ -13365,7 +13411,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Set up Evaluation"
+        "### Set up Evaluation"
       ],
       "metadata": {
         "id": "lQU32wDW0Ch8"
@@ -13443,7 +13489,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Load in our model"
+        "### Load in our model"
       ],
       "metadata": {
         "id": "HK0FUR6l0F7J"
@@ -13540,25 +13586,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Training our model with TrainingArguments and Trainer"
+      ],
+      "metadata": {
+        "id": "siMz15Lq0yA5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# REAL TRAINING ARGUMENTS\n",
-        "\n",
-        "# training_args = TrainingArguments(\n",
-        "#     output_dir=\"wav2vec_model_v2\",  # Output directory to save model checkpoints and logs\n",
-        "#     group_by_length=True,  # Group samples of roughly the same length together to minimize padding\n",
-        "#     per_device_train_batch_size=16,  # Batch size per GPU/device during training\n",
-        "#     evaluation_strategy=\"steps\",  # Evaluate every `eval_steps`\n",
-        "#     fp16=True,  # Use mixed precision training with automatic mixed precision scaler\n",
-        "#     save_steps=500,  # Save model checkpoint every `save_steps`\n",
-        "#     eval_steps=500,  # Evaluate model every `eval_steps`\n",
-        "#     logging_steps=100,  # Log training metrics every `logging_steps`\n",
-        "#     learning_rate=1e-4,  # Learning rate\n",
-        "#     weight_decay=0.01,  # Weight decay to prevent overfitting\n",
-        "#     warmup_steps=500,  # Warmup steps for learning rate scheduler\n",
-        "#     save_total_limit=2,  # Limit the total number of saved checkpoints\n",
-        "#     max_steps=10000,  # Maximum number of training steps\n",
-        "# )\n",
         "\n",
         "# TEST TRAINING ARGUMENTS\n",
         "\n",
@@ -13614,7 +13652,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Model Engine"
+        "### Model Engine"
       ],
       "metadata": {
         "id": "Infah8zr4xBO"
@@ -13743,6 +13781,24 @@
       },
       "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Evaluate with state-of-the-art models"
+      ],
+      "metadata": {
+        "id": "T2CI15RQ2C5T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Wav2Vec2.0"
+      ],
+      "metadata": {
+        "id": "RaWRMe3T06Id"
+      }
     },
     {
       "cell_type": "code",
@@ -14179,6 +14235,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Data2Vec"
+      ],
+      "metadata": {
+        "id": "0CZ450du095c"
+      }
     },
     {
       "cell_type": "code",
@@ -14705,6 +14770,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "HUBERT"
+      ],
+      "metadata": {
+        "id": "PuibM43v1CUW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "hubert = ModelEngine(\"facebook/hubert-large-ls960-ft\", custom_dataset)"
@@ -15143,6 +15217,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Inference"
+      ],
+      "metadata": {
+        "id": "kIyk2U4p1EiS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Inference with sample data"
+      ],
+      "metadata": {
+        "id": "BiqtfN1U1WjW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "audio, sampling_freq = librosa.load(\"/content/drive/MyDrive/198/126831/198-126831-0000.flac\", sr=16_000)\n",
@@ -15561,14 +15653,22 @@
         "    return librosa.effects.pitch_shift(self.data, sr=sampling_rate, n_steps=n_steps)\n",
         "\n",
         "  def time_stretch(self, speed_factor):\n",
-        "    return librosa.effects.time_stretch(self.data, rate=speed_factor)\n",
-        "\n"
+        "    return librosa.effects.time_stretch(self.data, rate=speed_factor)\n"
       ],
       "metadata": {
         "id": "qWTWUsjx8Qlc"
       },
       "execution_count": 69,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Apply Augmentation and combine it with our dataset"
+      ],
+      "metadata": {
+        "id": "otCvtHPX1j0t"
+      }
     },
     {
       "cell_type": "code",
@@ -15681,6 +15781,15 @@
       },
       "execution_count": 78,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Evaluate Wav2Vec2.0 again"
+      ],
+      "metadata": {
+        "id": "t7Z0bBsS1oQo"
+      }
     },
     {
       "cell_type": "code",
@@ -15865,15 +15974,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "vEe_YhsSdiSn"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
