--- a/training_notebook_non_dl.ipynb
+++ b/training_notebook_non_dl.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "joalvPPIEovi"
       },
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -189,7 +189,7 @@
       "metadata": {
         "id": "s5MsALQX_47K"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +213,7 @@
       "metadata": {
         "id": "U1daEXDhmTPy"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "5yKBHPxjqa8_"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,7 +249,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -719,7 +719,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,7 +744,7 @@
           "height": 505
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -792,7 +792,7 @@
           "height": 490
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -841,7 +841,7 @@
           "height": 426
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -873,7 +873,7 @@
           "height": 426
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -898,7 +898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "Xn_bykkYrAsW"
       },
@@ -914,7 +914,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "K6xerVMEP_U2"
       },
@@ -927,7 +927,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -961,7 +961,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "_H-mpoRAmDd6"
       },
@@ -976,7 +976,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "e9pLjDWuQtqI"
       },
@@ -1003,6 +1003,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# We split the datasets into 2 part to increase the training process.\n",
+        "# Can find the full model for HMM in github name hmm_model.pkl\n",
         "hmm_models = []\n",
         "\n",
         "items = list(df_dict.items())\n",
@@ -1040,7 +1042,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1102,7 +1104,7 @@
         },
         "outputId": "2e32a4d5-56b6-438d-f263-178e1074da54"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1126,7 +1128,7 @@
       "metadata": {
         "id": "Ye6wJvkau7wf"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1141,7 +1143,7 @@
         },
         "outputId": "a6f072f7-a08e-4c81-ecce-2c1d85622990"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1176,7 +1178,7 @@
         },
         "outputId": "d4cbc445-271b-4b75-b59d-092572709a91"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1284,7 +1286,7 @@
       "metadata": {
         "id": "JNLj_pPu_SFM"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1306,7 +1308,7 @@
       "metadata": {
         "id": "Eu4Hyy9_ApKs"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1322,7 +1324,7 @@
       "metadata": {
         "id": "zpnBh8Mj_yJe"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1335,7 +1337,7 @@
       "metadata": {
         "id": "5ArqfZLk_0LD"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1362,7 +1364,7 @@
       "metadata": {
         "id": "GeKwvGZo_2EA"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1387,7 +1389,7 @@
       "metadata": {
         "id": "_irI9lu8z01X"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1425,7 +1427,7 @@
       "metadata": {
         "id": "VKli60-sz4Yp"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1441,7 +1443,7 @@
         "id": "wf3zPT6ztZLp",
         "outputId": "4f1391a9-d7d9-4ac1-9af9-6bb1a17c0172"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1520,7 +1522,7 @@
       "metadata": {
         "id": "Nv_kRPggunQm"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1535,7 +1537,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1591,7 +1593,7 @@
       "metadata": {
         "id": "KzK-QWG-Phv3"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1618,7 +1620,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1726,7 +1728,7 @@
       "metadata": {
         "id": "f6XO5pp8Pwfz"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1742,7 +1744,7 @@
           "height": 17
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1818,7 +1820,7 @@
       "metadata": {
         "id": "X2Ob3cqJQtkt"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1838,7 +1840,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1870,7 +1872,7 @@
       "metadata": {
         "id": "xGrVHpyhSNQC"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1895,7 +1897,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
